# kestra-api-ddb

./: Cargo.toml  cdk.json  package-lock.json  package.json
app/get-lambda/: Cargo.toml
app/get-lambda/src/: main.rs  models.rs
app/post-lambda/: Cargo.toml
app/post-lambda/src/: data.rs  main.rs  models.rs
app/shared/src/clients/: clients.rs
infra/: kestra-flow.yaml
infra/lib/: article-1-stack.ts
infra/lib/constructs/: ddb-table.ts  get-lambda.ts  post-lambda.ts  queue-construct.ts
