[package]
name = "get-lambda"
version = "0.1.0"
edition = "2021"


[dependencies]
shared = { path = "../shared" }
# Lambda dependencies
lambda_runtime = "0.11.3"

## AWS SDK
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }

# JSON and Serde/DeSerde
serde_json = "1"
serde = { version = "1.0.194", features = ["derive"] }

chrono = { version = "0.4.38", features = ["serde"] }
svix-ksuid = "0.8.0"


# Asyn and tracing
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "registry",
] }


[profile.release]
opt-level = 3
